# jsonpath-pg

./: .gitignore  Dockerfile  README.md  build_native.sh  build_wasm.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml  semantic-release.yml
src/c/: CMakeLists.txt  jsonpath.h  jsonpath_gram.c  jsonpath_gram.h  jsonpath_internal.h  jsonpath_scan.c  main.c  safe_memory.c  safe_memory.h
src/js/: index.d.ts  index.js  lib.js
test/: test-wasm.js  tests.js  types.ts
